Added RWD at header.ejs

--- a/pages/login.html
+++ b/pages/login.html
@@ -62,7 +62,7 @@
                         <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
                     </form>
                     <a class="d-block 
-                    click-me" href="signup.html">點我註冊</a>
+                    click-me" href="signUp.html">點我註冊</a>
                 </div>
             </div>
         </div>
