--- a/pages/index.html
+++ b/pages/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>浪潮情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
-    <main class="homepage">
+    <main class=" homepage d-flex flex-column justify-content-center align-items-center">
       <div class="container">
-        <h2 class="text-white mb-24">找尋自我</h2>
-        <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
+        <h2 class="mb-24 text-white text-nowrap text-center text-md-start">找尋自我</h2>
+        <h2 class="text-white text-nowrap text-center text-md-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
           <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
