--- a/emoCardsClassifiedExpand.html
+++ b/emoCardsClassifiedExpand.html
@@ -7,8 +7,10 @@
     <title>浪潮情緒卡｜情緒卡-展開</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-792d93a4.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9dc02ba7.css">
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script type="module" crossorigin src="/wavemocards/assets/main-fd0ea064.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-34afe0c3.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
