--- a/findEmoHappy.html
+++ b/findEmoHappy.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜快樂</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-792d93a4.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9dc02ba7.css">
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script type="module" crossorigin src="/wavemocards/assets/main-fd0ea064.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-34afe0c3.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
