--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>浪潮情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-792d93a4.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9dc02ba7.css">
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script type="module" crossorigin src="/wavemocards/assets/main-fd0ea064.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-34afe0c3.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -16,11 +19,11 @@
         <h1 id="home">
             <a href="index.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
-        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+        <ul class="d-flex justify-content-end justify-content-md-between align-items-center mb-0 ps-0">
             <li class="d-none d-md-block " data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">
                 <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
             </li>
-            <li class="ms-20 text-nowrap" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
+            <li class="d-none d-md-block ms-20 text-nowrap" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="d-none d-md-block ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
@@ -34,7 +37,10 @@
                     <div class="p-0 card card-body rounded-2 border-0 bg-main-tint03" style="width: 120px;">
                         <ul>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signup.himl">註冊</a>
+                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
+                            </li>
+                            <li>
+                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
                             </li>
                             <li>
                                 <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
@@ -46,10 +52,10 @@
         </ul>
     </div>
 </header>
-    <main class="homepage">
+    <main class=" homepage d-flex flex-column justify-content-center align-items-center">
       <div class="container">
-        <h2 class="text-white mb-24">找尋自我</h2>
-        <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
+        <h2 class="mb-24 text-white text-nowrap text-center text-md-start">找尋自我</h2>
+        <h2 class="text-white text-nowrap text-center text-md-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
           <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
