--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-fd0ea064.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-34afe0c3.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-5738ba10.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-d6225b7a.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -30,20 +30,20 @@
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
             <li class="d-md-none ms-16 position-relative">
-                <button class="px-8 py-4 btn btn-white btn-hamburger border border-main-tint01 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
-                    <div class="p-0 card card-body rounded-2 border-0 bg-main-tint03" style="width: 120px;">
+                    <div class="p-0 card card-body rounded-2 border border-main-tint01" style="width: 120px;">
                         <ul>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                             </li>
                         </ul>
                     </div>
