--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-fd0ea064.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-34afe0c3.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-5738ba10.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-d6225b7a.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -30,20 +30,20 @@
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
             <li class="d-md-none ms-16 position-relative">
-                <button class="px-8 py-4 btn btn-white btn-hamburger border border-main-tint01 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
-                    <div class="p-0 card card-body rounded-2 border-0 bg-main-tint03" style="width: 120px;">
+                    <div class="p-0 card card-body rounded-2 border border-main-tint01" style="width: 120px;">
                         <ul>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="login.html">登入</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="signUp.html">註冊</a>
                             </li>
                             <li>
-                                <a class="d-block px-16 py-12 link-gray-700 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
+                                <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
                             </li>
                         </ul>
                     </div>
@@ -52,59 +52,57 @@
         </ul>
     </div>
 </header>
-    <main>
-        <div class="login d-flex justify-content-center align-items-stretch">
-            <div class="img w-50">
-                <img src="/wavemocards/assets/login-bg-22843504.svg" alt="login page background">
-            </div>
-    
-            <div class="w-50 py-32 px-24 d-flex flex-column align-items-center">
-                <div class="form">
-                    <div class="mb-20 text-main d-flex flex-column align-items-center">
-                        <i class="bi bi-person-circle profile"></i>
-                    </div>
-                    <h2 class="mb-32">登入</h2>
-                    <!-- 尚未填入 a 連結 -->
-                    <!-- <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
-                        透過 Google 帳號登入
-                        <i class="bi bi-google ms-8"></i>
-                    </a>
-                    <div class="or mb-32">或</div> -->
-    
-                    <!-- 尚未填入 action 內容 -->
-                    <form action="#" method="post" class="needs-validation" novalidate>
-                        <!-- <div class="mb-16">
-                            <label for="loginEmail" class="form-label  d-flex justify-content-between">
-                                E-mail
-                                <span class="text-pink-tint02 fs-9">*必填</span>
-                            </label>
-                            <input type="text" class="form-control rounded-pill px-20" id="loginEmail" placeholder="wavemocards@gmail.com" required>
-                        </div> -->
-                        <div class="mb-16">
-                            <label for="loginAcount" class="form-label  d-flex justify-content-between">
-                                用戶名稱
-                                <span class="text-pink-tint02 fs-9">*必填</span>
-                            </label>
-                            <input type="text" class="form-control rounded-pill px-20" id="loginAcount" placeholder="wavemocards" required>
-                            <div class="invalid-feedback">
-                                請輸入正確的 e-mail 帳號
-                            </div>
-                        </div>
-                        <div class="mb-32">
-                            <label for="loginPassword" class="form-label d-flex justify-content-between">
-                                密碼
-                                <span class="text-pink-tint02 fs-9">*必填</span>
-                            </label>
-                            <input type="password" class="form-control rounded-pill px-20" id="loginPassword" required aria-describedby="passwordHelp" placeholder="********" required>
-                            <div class="invalid-feedback">
-                                請輸入正確的密碼
-                            </div>
-                        </div>
-                        <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
-                    </form>
-                    <a class="d-block 
-                    click-me" href="signUp.html">點我註冊</a>
+    <main  class="login d-flex justify-content-center align-items-stretch">
+        <div class="d-none d-lg-block img w-50">
+            <img src="/wavemocards/assets/login-bg-22843504.svg" alt="login page background">
+        </div>
+
+        <div class="box-50 py-32 px-24 d-flex flex-column align-items-center">
+            <div class="form">
+                <div class="mb-20 text-main d-flex flex-column align-items-center">
+                    <i class="bi bi-person-circle profile"></i>
                 </div>
+                <h2 class="mb-32">登入</h2>
+                <!-- 尚未填入 a 連結 -->
+                <!-- <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
+                    透過 Google 帳號登入
+                    <i class="bi bi-google ms-8"></i>
+                </a>
+                <div class="or mb-32">或</div> -->
+
+                <!-- 尚未填入 action 內容 -->
+                <form action="#" method="post" class="needs-validation" novalidate>
+                    <!-- <div class="mb-16">
+                        <label for="loginEmail" class="form-label  d-flex justify-content-between">
+                            E-mail
+                            <span class="text-pink-tint02 fs-9">*必填</span>
+                        </label>
+                        <input type="text" class="form-control rounded-pill px-20" id="loginEmail" placeholder="wavemocards@gmail.com" required>
+                    </div> -->
+                    <div class="mb-16">
+                        <label for="loginAcount" class="form-label  d-flex justify-content-between">
+                            用戶名稱
+                            <span class="text-pink-tint02 fs-9">*必填</span>
+                        </label>
+                        <input type="text" class="form-control rounded-pill px-20" id="loginAcount" placeholder="wavemocards" required>
+                        <div class="invalid-feedback">
+                            請輸入正確的 e-mail 帳號
+                        </div>
+                    </div>
+                    <div class="mb-32">
+                        <label for="loginPassword" class="form-label d-flex justify-content-between">
+                            密碼
+                            <span class="text-pink-tint02 fs-9">*必填</span>
+                        </label>
+                        <input type="password" class="form-control rounded-pill px-20" id="loginPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <div class="invalid-feedback">
+                            請輸入正確的密碼
+                        </div>
+                    </div>
+                    <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
+                </form>
+                <a class="d-block 
+                click-me" href="signUp.html">點我註冊</a>
             </div>
         </div>
     </main>
