Added RWD at home & aboutEmotions page

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,12 +14,12 @@
   <body>
     <%- include('./layout/headerLoggedIn'); -%>
 
-    <main class="homepage">
+    <main class="homepage d-flex flex-column justify-content-center align-items-center">
       <div class="container">
-        <h2 class="text-white mb-24">找尋自我</h2>
-        <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
+        <h2 class="mb-24 pt-72 text-white text-nowrap text-center text-md-start">找尋自我</h2>
+        <h2 class="text-white text-nowrap text-center text-md-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
-          <a class="px-64 btn btn-pink c-btn c-btn-xl" href="aboutEmotions.html">認識情緒</a>
+          <a class="btn btn-pink c-btn c-btn-xl" href="aboutEmotions.html">認識情緒</a>
         </div>
       </div>
     </main>
