--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-5738ba10.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-d6225b7a.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-8078abdc.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-1f1ec083.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -29,7 +29,7 @@
             <li class="d-none d-md-block ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
-            <li class="d-md-none ms-16 position-relative">
+            <li class="d-md-none position-relative">
                 <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
