--- a/myRecordsAnalyze.html
+++ b/myRecordsAnalyze.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-5738ba10.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-d6225b7a.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-8078abdc.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-1f1ec083.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -19,7 +19,36 @@
         <h1>
             <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
-        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+        <div class="d-lg-none position-relative">
+            <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <i class="bi bi-list"></i>
+            </button>
+            <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
+                <div class="p-0 card card-body rounded-2 border-2 border-main-tint01" style="width: 160px;">
+                    <ul>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="aboutEmotions.html">認識情緒</a>
+                        </li>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="findMyEmotions.html">找尋我的情緒</a>
+                        </li>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="myRecords.html">我的紀錄</a>
+                        </li>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="sharedByOthers.html">他人的分享</a>
+                        </li>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="account.html">我的帳戶</a>
+                        </li>
+                        <li>
+                            <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="#">登出</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <ul class="d-none d-lg-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
                 <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
@@ -118,65 +147,63 @@
     </a>
 </div>    <footer class="footer py-48">
     <div class="container">
-        <div class="row gap-40">
+        <div class="d-flex flex-column flex-lg-row align-items-center align-items-lg-start">
             <!-- logo -->
-            <div class="col-2">
-                <!-- <a href="home.html"> -->
-                    <img class="w-50" src="/wavemocards/assets/logo_footer-2fe4aa72.svg" alt="logo">
-                <!-- </a> -->
+            <div class="footer-img mb-48 mb-lg-0 me-lg-96">
+                <img class="w-100" src="/wavemocards/assets/logo_footer-2fe4aa72.svg" alt="logo">
             </div>
             <!-- Developers -->
-            <div class="col-3">
-                <h3>開發團隊</h3>
+            <div class="footer-text-box mb-48 mb-lg-0 me-lg-56">
+                <h3 class="mb-16 fs-5">開發團隊</h3>
                 <ul>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
                             <span>Product Manager</span>
-                            <span>Shu-Ping Yu</span>
+                            <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
                             <span>Product Designer</span>
-                            <span>Shu-Ping Yu</span>
+                            <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/" target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/" target="_blank">
                             <span>Front-End Engineer</span>
-                            <span>Shu-Ping Yu</span>
+                            <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/%E5%81%89%E5%87%B1-%E6%9E%97-668aaa204/" target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/%E5%81%89%E5%87%B1-%E6%9E%97-668aaa204/" target="_blank">
                             <span>Front-End Consultant</span>
-                            <span>Wei-Kai Lin</span>
+                            <span class="mt-4 d-block text-end">Wei-Kai Lin</span>
                         </a>
                     </li>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Database Developer</span>
-                            <span>Leon Wu</span>
+                            <span class="mt-4 d-block text-end">Leon Wu</span>
                         </a>
                     </li>
-                    <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
-                            <span>Leon Wu</span>
+                            <span class="mt-4 d-block text-end">Leon Wu</span>
                         </a>
                     </li>
                     <li>
-                        <a class="d-flex justify-content-between" href="https://a8607125167.wixsite.com/mysite/about"  target="_blank">
+                        <a class="d-lg-flex justify-content-between" href="https://a8607125167.wixsite.com/mysite/about"  target="_blank">
                             <span>Illustrator</span>
-                            <span>Yi-Wen Fang</span>
+                            <span class="mt-4 d-block text-end">Yi-Wen Fang</span>
                         </a>
                     </li>
                 </ul>
             </div>
             <!-- Contact -->
-            <div class="col-3">
+            <div class="footer-text-box mb-48 mb-lg-0 me-lg-56">
                 <a href="mailto:info@wavemocards.com">
-                    <h3>聯絡我們</h3>
+                    <h3 class="mb-16 fs-5">聯絡我們</h3>
                     <span>info@wavemocards.com</span>
                 </a>
             </div>
